y.output
Terminals unused in grammar

   IF
   DO
   WHILE
   GOTO
   SIZEOF
   MUL_EQ
   DIV_EQ
   ADD_EQ
   PER_EQ
   RS_EQ
   SUB_EQ
   LS_EQ
   AND_EQ
   XOR_EQ
   OR_EQ
   REL_CONST
   DEC_CONST
   ELSE
   "then"


Grammar

    0 $accept: program_unit $end

    1 program_unit: HEADER program_unit
    2             | DEFINE primary_expression program_unit
    3             | translation_unit

    4 translation_unit: external_decl
    5                 | translation_unit external_decl

    6 external_decl: function_definition
    7              | decl
    8              | compound_stat

    9 function_definition: type_spec declarator compound_stat
   10                    | declarator compound_stat

   11 decl: type_spec init_declarator_list ';'

   12 type_spec: TYPE_CONST

   13 init_declarator_list: init_declarator
   14                     | init_declarator_list ',' init_declarator

   15 init_declarator: declarator
   16                | declarator '=' initializer

   17 spec_qualifier_list: type_spec spec_qualifier_list
   18                    | type_spec

   19 declarator: id
   20           | '(' declarator ')'
   21           | declarator '[' const_expression ']'
   22           | declarator '[' ']'
   23           | declarator '(' param_type_list ')'
   24           | declarator '(' func_call_params ')'
   25           | declarator '(' ')'

   26 param_type_list: param_list

   27 param_list: param_decl
   28           | param_list ',' param_decl

   29 param_decl: type_spec declarator
   30           | type_spec abstract_declarator
   31           | type_spec

   32 func_call_params: id
   33                 | func_call_params ',' id
   34                 | func_call_params ',' string
   35                 | string

   36 initializer: assignment_expression
   37            | OPEN_SCOPE initializer_list CLOSE_SCOPE
   38            | OPEN_SCOPE initializer_list ',' CLOSE_SCOPE

   39 initializer_list: initializer
   40                 | initializer_list ',' initializer

   41 type_name: spec_qualifier_list abstract_declarator
   42          | spec_qualifier_list

   43 abstract_declarator: direct_abstract_declarator

   44 direct_abstract_declarator: '(' abstract_declarator ')'
   45                           | direct_abstract_declarator '[' const_expression ']'
   46                           | '[' const_expression ']'
   47                           | direct_abstract_declarator '[' ']'
   48                           | '[' ']'
   49                           | direct_abstract_declarator '(' param_type_list ')'
   50                           | '(' param_type_list ')'
   51                           | direct_abstract_declarator '(' ')'
   52                           | '(' ')'

   53 stat: labeled_stat
   54     | exp_stat
   55     | compound_stat
   56     | selection_stat
   57     | iteration_stat
   58     | jump_stat

   59 labeled_stat: CASE const_expression ':' stat
   60             | DEFAULT ':' stat

   61 exp_stat: expression ';'
   62         | ';'

   63 compound_stat: OPEN_SCOPE lists CLOSE_SCOPE
   64              | OPEN_SCOPE CLOSE_SCOPE

   65 lists: decl lists
   66      | stat lists
   67      | decl
   68      | stat

   69 $@1: %empty

   70 selection_stat: SWITCH $@1 '(' expression ')' compound_stat

   71 iteration_stat: FOR '(' decl expression ';' expression ')' stat
   72               | FOR '(' decl expression ';' ')' stat
   73               | FOR '(' decl ';' expression ')' stat
   74               | FOR '(' decl ';' ')' stat
   75               | FOR '(' expression ';' expression ';' expression ')' stat
   76               | FOR '(' expression ';' expression ';' ')' stat
   77               | FOR '(' expression ';' ';' expression ')' stat
   78               | FOR '(' expression ';' ';' ')' stat
   79               | FOR '(' ';' expression ';' expression ')' stat
   80               | FOR '(' ';' expression ';' ')' stat
   81               | FOR '(' ';' ';' expression ')' stat
   82               | FOR '(' ';' ';' ')' stat

   83 jump_stat: CONTINUE ';'
   84          | BREAK ';'
   85          | RETURN expression ';'
   86          | RETURN ';'

   87 expression: assignment_expression
   88           | expression ',' assignment_expression

   89 assignment_expression: conditional_expression
   90                      | unary_expression '=' assignment_expression

   91 conditional_expression: logical_or_expression
   92                       | logical_or_expression '?' expression ':' conditional_expression

   93 const_expression: conditional_expression

   94 logical_or_expression: logical_and_expression
   95                      | logical_or_expression OR_CONST logical_and_expression

   96 logical_and_expression: inclusive_or_expression
   97                       | logical_and_expression AND_CONST inclusive_or_expression

   98 inclusive_or_expression: exclusive_or_expression
   99                        | inclusive_or_expression '|' exclusive_or_expression

  100 exclusive_or_expression: and_expression
  101                        | exclusive_or_expression '^' and_expression

  102 and_expression: equality_expression
  103               | and_expression '&' equality_expression

  104 equality_expression: relational_expression
  105                    | equality_expression E_CONST relational_expression
  106                    | equality_expression LE_CONST relational_expression
  107                    | equality_expression GE_CONST relational_expression
  108                    | equality_expression NE_CONST relational_expression

  109 relational_expression: shift_expression
  110                      | relational_expression L_CONST shift_expression
  111                      | relational_expression G_CONST shift_expression

  112 shift_expression: additive_expression
  113                 | shift_expression LSHIFT_CONST additive_expression
  114                 | shift_expression RSHIFT_CONST additive_expression

  115 additive_expression: mult_expression
  116                    | additive_expression '+' mult_expression
  117                    | additive_expression '-' mult_expression

  118 mult_expression: cast_expression
  119                | mult_expression '*' cast_expression
  120                | mult_expression '/' cast_expression
  121                | mult_expression '%' cast_expression

  122 cast_expression: unary_expression
  123                | '(' type_name ')' cast_expression

  124 unary_expression: postfix_expression
  125                 | INC_CONST unary_expression
  126                 | unary_operator cast_expression

  127 unary_operator: '&'
  128               | '*'
  129               | '+'
  130               | '-'
  131               | '~'
  132               | '!'

  133 postfix_expression: primary_expression
  134                   | postfix_expression '[' expression ']'
  135                   | postfix_expression '(' argument_exp_list ')'
  136                   | postfix_expression '(' ')'
  137                   | postfix_expression INC_CONST

  138 primary_expression: id
  139                   | consts
  140                   | '(' expression ')'

  141 argument_exp_list: assignment_expression
  142                  | argument_exp_list ',' assignment_expression

  143 consts: INT
  144       | CHAR
  145       | FLOAT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 132
'%' (37) 121
'&' (38) 103 127
'(' (40) 20 23 24 25 44 49 50 51 52 70 71 72 73 74 75 76 77 78 79 80
    81 82 123 135 136 140
')' (41) 20 23 24 25 44 49 50 51 52 70 71 72 73 74 75 76 77 78 79 80
    81 82 123 135 136 140
'*' (42) 119 128
'+' (43) 116 129
',' (44) 14 28 33 34 38 40 88 142
'-' (45) 117 130
'/' (47) 120
':' (58) 59 60 92
';' (59) 11 61 62 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86
'=' (61) 16 90
'?' (63) 92
'[' (91) 21 22 45 46 47 48 134
']' (93) 21 22 45 46 47 48 134
'^' (94) 101
'|' (124) 99
'~' (126) 131
error (256)
INT (258) 143
CHAR (259) 144
FLOAT (260) 145
string (261) 34 35
id (262) 19 32 33 138
TYPE_CONST (263) 12
DEFINE (264) 2
OPEN_SCOPE (265) 37 38 63 64
CLOSE_SCOPE (266) 37 38 63 64
IF (267)
FOR (268) 71 72 73 74 75 76 77 78 79 80 81 82
DO (269)
WHILE (270)
BREAK (271) 84
SWITCH (272) 70
CONTINUE (273) 83
RETURN (274) 85 86
CASE (275) 59
DEFAULT (276) 60
GOTO (277)
SIZEOF (278)
OR_CONST (279) 95
AND_CONST (280) 97
E_CONST (281) 105
NE_CONST (282) 108
LE_CONST (283) 106
GE_CONST (284) 107
G_CONST (285) 111
L_CONST (286) 110
LSHIFT_CONST (287) 113
MUL_EQ (288)
DIV_EQ (289)
ADD_EQ (290)
PER_EQ (291)
RS_EQ (292)
SUB_EQ (293)
LS_EQ (294)
AND_EQ (295)
XOR_EQ (296)
OR_EQ (297)
RSHIFT_CONST (298) 114
REL_CONST (299)
INC_CONST (300) 125 137
DEC_CONST (301)
ELSE (302)
HEADER (303) 1
"then" (304)


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
program_unit (70)
    on left: 1 2 3, on right: 0 1 2
translation_unit (71)
    on left: 4 5, on right: 3 5
external_decl (72)
    on left: 6 7 8, on right: 4 5
function_definition (73)
    on left: 9 10, on right: 6
decl (74)
    on left: 11, on right: 7 65 67 71 72 73 74
type_spec (75)
    on left: 12, on right: 9 11 17 18 29 30 31
init_declarator_list (76)
    on left: 13 14, on right: 11 14
init_declarator (77)
    on left: 15 16, on right: 13 14
spec_qualifier_list (78)
    on left: 17 18, on right: 17 41 42
declarator (79)
    on left: 19 20 21 22 23 24 25, on right: 9 10 15 16 20 21 22 23
    24 25 29
param_type_list (80)
    on left: 26, on right: 23 49 50
param_list (81)
    on left: 27 28, on right: 26 28
param_decl (82)
    on left: 29 30 31, on right: 27 28
func_call_params (83)
    on left: 32 33 34 35, on right: 24 33 34
initializer (84)
    on left: 36 37 38, on right: 16 39 40
initializer_list (85)
    on left: 39 40, on right: 37 38 40
type_name (86)
    on left: 41 42, on right: 123
abstract_declarator (87)
    on left: 43, on right: 30 41 44
direct_abstract_declarator (88)
    on left: 44 45 46 47 48 49 50 51 52, on right: 43 45 47 49 51
stat (89)
    on left: 53 54 55 56 57 58, on right: 59 60 66 68 71 72 73 74 75
    76 77 78 79 80 81 82
labeled_stat (90)
    on left: 59 60, on right: 53
exp_stat (91)
    on left: 61 62, on right: 54
compound_stat (92)
    on left: 63 64, on right: 8 9 10 55 70
lists (93)
    on left: 65 66 67 68, on right: 63 65 66
selection_stat (94)
    on left: 70, on right: 56
$@1 (95)
    on left: 69, on right: 70
iteration_stat (96)
    on left: 71 72 73 74 75 76 77 78 79 80 81 82, on right: 57
jump_stat (97)
    on left: 83 84 85 86, on right: 58
expression (98)
    on left: 87 88, on right: 61 70 71 72 73 75 76 77 78 79 80 81 85
    88 92 134 140
assignment_expression (99)
    on left: 89 90, on right: 36 87 88 90 141 142
conditional_expression (100)
    on left: 91 92, on right: 89 92 93
const_expression (101)
    on left: 93, on right: 21 45 46 59
logical_or_expression (102)
    on left: 94 95, on right: 91 92 95
logical_and_expression (103)
    on left: 96 97, on right: 94 95 97
inclusive_or_expression (104)
    on left: 98 99, on right: 96 97 99
exclusive_or_expression (105)
    on left: 100 101, on right: 98 99 101
and_expression (106)
    on left: 102 103, on right: 100 101 103
equality_expression (107)
    on left: 104 105 106 107 108, on right: 102 103 105 106 107 108
relational_expression (108)
    on left: 109 110 111, on right: 104 105 106 107 108 110 111
shift_expression (109)
    on left: 112 113 114, on right: 109 110 111 113 114
additive_expression (110)
    on left: 115 116 117, on right: 112 113 114 116 117
mult_expression (111)
    on left: 118 119 120 121, on right: 115 116 117 119 120 121
cast_expression (112)
    on left: 122 123, on right: 118 119 120 121 123 126
unary_expression (113)
    on left: 124 125 126, on right: 90 122 125
unary_operator (114)
    on left: 127 128 129 130 131 132, on right: 126
postfix_expression (115)
    on left: 133 134 135 136 137, on right: 124 134 135 136 137
primary_expression (116)
    on left: 138 139 140, on right: 2 133
argument_exp_list (117)
    on left: 141 142, on right: 135 142
consts (118)
    on left: 143 144 145, on right: 139


State 0

    0 $accept: . program_unit $end

    id          shift, and go to state 1
    TYPE_CONST  shift, and go to state 2
    DEFINE      shift, and go to state 3
    OPEN_SCOPE  shift, and go to state 4
    HEADER      shift, and go to state 5
    '('         shift, and go to state 6

    program_unit         go to state 7
    translation_unit     go to state 8
    external_decl        go to state 9
    function_definition  go to state 10
    decl                 go to state 11
    type_spec            go to state 12
    declarator           go to state 13
    compound_stat        go to state 14


State 1

   19 declarator: id .

    $default  reduce using rule 19 (declarator)


State 2

   12 type_spec: TYPE_CONST .

    $default  reduce using rule 12 (type_spec)


State 3

    2 program_unit: DEFINE . primary_expression program_unit

    INT    shift, and go to state 15
    CHAR   shift, and go to state 16
    FLOAT  shift, and go to state 17
    id     shift, and go to state 18
    '('    shift, and go to state 19

    primary_expression  go to state 20
    consts              go to state 21


State 4

   63 compound_stat: OPEN_SCOPE . lists CLOSE_SCOPE
   64              | OPEN_SCOPE . CLOSE_SCOPE

    INT          shift, and go to state 15
    CHAR         shift, and go to state 16
    FLOAT        shift, and go to state 17
    id           shift, and go to state 18
    TYPE_CONST   shift, and go to state 2
    OPEN_SCOPE   shift, and go to state 4
    CLOSE_SCOPE  shift, and go to state 22
    FOR          shift, and go to state 23
    BREAK        shift, and go to state 24
    SWITCH       shift, and go to state 25
    CONTINUE     shift, and go to state 26
    RETURN       shift, and go to state 27
    CASE         shift, and go to state 28
    DEFAULT      shift, and go to state 29
    INC_CONST    shift, and go to state 30
    '+'          shift, and go to state 31
    '-'          shift, and go to state 32
    '*'          shift, and go to state 33
    ';'          shift, and go to state 34
    '('          shift, and go to state 35
    '&'          shift, and go to state 36
    '~'          shift, and go to state 37
    '!'          shift, and go to state 38

    decl                     go to state 39
    type_spec                go to state 40
    stat                     go to state 41
    labeled_stat             go to state 42
    exp_stat                 go to state 43
    compound_stat            go to state 44
    lists                    go to state 45
    selection_stat           go to state 46
    iteration_stat           go to state 47
    jump_stat                go to state 48
    expression               go to state 49
    assignment_expression    go to state 50
    conditional_expression   go to state 51
    logical_or_expression    go to state 52
    logical_and_expression   go to state 53
    inclusive_or_expression  go to state 54
    exclusive_or_expression  go to state 55
    and_expression           go to state 56
    equality_expression      go to state 57
    relational_expression    go to state 58
    shift_expression         go to state 59
    additive_expression      go to state 60
    mult_expression          go to state 61
    cast_expression          go to state 62
    unary_expression         go to state 63
    unary_operator           go to state 64
    postfix_expression       go to state 65
    primary_expression       go to state 66
    consts                   go to state 21


State 5

    1 program_unit: HEADER . program_unit

    id          shift, and go to state 1
    TYPE_CONST  shift, and go to state 2
    DEFINE      shift, and go to state 3
    OPEN_SCOPE  shift, and go to state 4
    HEADER      shift, and go to state 5
    '('         shift, and go to state 6

    program_unit         go to state 67
    translation_unit     go to state 8
    external_decl        go to state 9
    function_definition  go to state 10
    decl                 go to state 11
    type_spec            go to state 12
    declarator           go to state 13
    compound_stat        go to state 14


State 6

   20 declarator: '(' . declarator ')'

    id   shift, and go to state 1
    '('  shift, and go to state 6

    declarator  go to state 68


State 7

    0 $accept: program_unit . $end

    $end  shift, and go to state 69


State 8

    3 program_unit: translation_unit .
    5 translation_unit: translation_unit . external_decl

    id          shift, and go to state 1
    TYPE_CONST  shift, and go to state 2
    OPEN_SCOPE  shift, and go to state 4
    '('         shift, and go to state 6

    $default  reduce using rule 3 (program_unit)

    external_decl        go to state 70
    function_definition  go to state 10
    decl                 go to state 11
    type_spec            go to state 12
    declarator           go to state 13
    compound_stat        go to state 14


State 9

    4 translation_unit: external_decl .

    $default  reduce using rule 4 (translation_unit)


State 10

    6 external_decl: function_definition .

    $default  reduce using rule 6 (external_decl)


State 11

    7 external_decl: decl .

    $default  reduce using rule 7 (external_decl)


State 12

    9 function_definition: type_spec . declarator compound_stat
   11 decl: type_spec . init_declarator_list ';'

    id   shift, and go to state 1
    '('  shift, and go to state 6

    init_declarator_list  go to state 71
    init_declarator       go to state 72
    declarator            go to state 73


State 13

   10 function_definition: declarator . compound_stat
   21 declarator: declarator . '[' const_expression ']'
   22           | declarator . '[' ']'
   23           | declarator . '(' param_type_list ')'
   24           | declarator . '(' func_call_params ')'
   25           | declarator . '(' ')'

    OPEN_SCOPE  shift, and go to state 4
    '('         shift, and go to state 74
    '['         shift, and go to state 75

    compound_stat  go to state 76


State 14

    8 external_decl: compound_stat .

    $default  reduce using rule 8 (external_decl)


State 15

  143 consts: INT .

    $default  reduce using rule 143 (consts)


State 16

  144 consts: CHAR .

    $default  reduce using rule 144 (consts)


State 17

  145 consts: FLOAT .

    $default  reduce using rule 145 (consts)


State 18

  138 primary_expression: id .

    $default  reduce using rule 138 (primary_expression)


State 19

  140 primary_expression: '(' . expression ')'

    INT        shift, and go to state 15
    CHAR       shift, and go to state 16
    FLOAT      shift, and go to state 17
    id         shift, and go to state 18
    INC_CONST  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '('        shift, and go to state 35
    '&'        shift, and go to state 36
    '~'        shift, and go to state 37
    '!'        shift, and go to state 38

    expression               go to state 77
    assignment_expression    go to state 50
    conditional_expression   go to state 51
    logical_or_expression    go to state 52
    logical_and_expression   go to state 53
    inclusive_or_expression  go to state 54
    exclusive_or_expression  go to state 55
    and_expression           go to state 56
    equality_expression      go to state 57
    relational_expression    go to state 58
    shift_expression         go to state 59
    additive_expression      go to state 60
    mult_expression          go to state 61
    cast_expression          go to state 62
    unary_expression         go to state 63
    unary_operator           go to state 64
    postfix_expression       go to state 65
    primary_expression       go to state 66
    consts                   go to state 21


State 20

    2 program_unit: DEFINE primary_expression . program_unit

    id          shift, and go to state 1
    TYPE_CONST  shift, and go to state 2
    DEFINE      shift, and go to state 3
    OPEN_SCOPE  shift, and go to state 4
    HEADER      shift, and go to state 5
    '('         shift, and go to state 6

    program_unit         go to state 78
    translation_unit     go to state 8
    external_decl        go to state 9
    function_definition  go to state 10
    decl                 go to state 11
    type_spec            go to state 12
    declarator           go to state 13
    compound_stat        go to state 14


State 21

  139 primary_expression: consts .

    $default  reduce using rule 139 (primary_expression)


State 22

   64 compound_stat: OPEN_SCOPE CLOSE_SCOPE .

    $default  reduce using rule 64 (compound_stat)


State 23

   71 iteration_stat: FOR . '(' decl expression ';' expression ')' stat
   72               | FOR . '(' decl expression ';' ')' stat
   73               | FOR . '(' decl ';' expression ')' stat
   74               | FOR . '(' decl ';' ')' stat
   75               | FOR . '(' expression ';' expression ';' expression ')' stat
   76               | FOR . '(' expression ';' expression ';' ')' stat
   77               | FOR . '(' expression ';' ';' expression ')' stat
   78               | FOR . '(' expression ';' ';' ')' stat
   79               | FOR . '(' ';' expression ';' expression ')' stat
   80               | FOR . '(' ';' expression ';' ')' stat
   81               | FOR . '(' ';' ';' expression ')' stat
   82               | FOR . '(' ';' ';' ')' stat

    '('  shift, and go to state 79


State 24

   84 jump_stat: BREAK . ';'

    ';'  shift, and go to state 80


State 25

   70 selection_stat: SWITCH . $@1 '(' expression ')' compound_stat

    $default  reduce using rule 69 ($@1)

    $@1  go to state 81


State 26

   83 jump_stat: CONTINUE . ';'

    ';'  shift, and go to state 82


State 27

   85 jump_stat: RETURN . expression ';'
   86          | RETURN . ';'

    INT        shift, and go to state 15
    CHAR       shift, and go to state 16
    FLOAT      shift, and go to state 17
    id         shift, and go to state 18
    INC_CONST  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    ';'        shift, and go to state 83
    '('        shift, and go to state 35
    '&'        shift, and go to state 36
    '~'        shift, and go to state 37
    '!'        shift, and go to state 38

    expression               go to state 84
    assignment_expression    go to state 50
    conditional_expression   go to state 51
    logical_or_expression    go to state 52
    logical_and_expression   go to state 53
    inclusive_or_expression  go to state 54
    exclusive_or_expression  go to state 55
    and_expression           go to state 56
    equality_expression      go to state 57
    relational_expression    go to state 58
    shift_expression         go to state 59
    additive_expression      go to state 60
    mult_expression          go to state 61
    cast_expression          go to state 62
    unary_expression         go to state 63
    unary_operator           go to state 64
    postfix_expression       go to state 65
    primary_expression       go to state 66
    consts                   go to state 21


State 28

   59 labeled_stat: CASE . const_expression ':' stat

    INT        shift, and go to state 15
    CHAR       shift, and go to state 16
    FLOAT      shift, and go to state 17
    id         shift, and go to state 18
    INC_CONST  shift, and go to state 30
    '+'        shift, and go to state 31
    '-'        shift, and go to state 32
    '*'        shift, and go to state 33
    '('        shift, and go to state 35
    '&'        shift, and go to state 36
    '~'        shift, and go to state 37
    '!'        shift, and go to state 38
